# Monocoque

./: .env.example  .gitignore  Makefile  README.md  claude.md  data-gaps.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
airflow/: Dockerfile  requirements.txt
airflow/dags/: backfill_jolpica.py  backfill_openf1.py  dbt_run.py  dq_monitor.py  dq_telegram.py  ingest_and_dbt.py  session_openf1.py  weekly_jolpica.py
clickhouse/: migrate.py
clickhouse/config/: users_override.xml
clickhouse/migrations/: 001_raw_jolpica.sql  002_raw_openf1.sql  003_dim_driver_id_map.sql  004_alter_circuits.sql  005_add_gps_updated.sql  005_create_f1_mart_db.sql  006_raw_fastf1.sql  007_add_distance_m.sql  008_populate_circuit_stats.sql  009_raw_meta_ingestion_log.sql
dbt/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/docs/: catalog.json  manifest.json
dbt/macros/: elementary_clickhouse_compat.sql  lap_time_to_ms.sql
dbt/seeds/: driver_id_map.csv
dbt/tests/: assert_all_rounds_have_results.sql  assert_circuit_stats_populated.sql  assert_constructor_in_dim.sql  assert_constructor_points_consistent.sql  assert_dim_sessions_coverage.sql  assert_driver_count_per_session.sql  assert_driver_in_dim.sql  assert_grid_position_valid.sql  assert_lap_count_consistent.sql  assert_lap_times_in_range.sql  assert_match_rate.sql  assert_no_duplicate_laps.sql  assert_no_future_laps.sql  (+15 more)
docs/: data-quality.md  qualifying-comparison-handoff.md  warehouse-access-guide.md
metabase/: dashboard_queries.sql  queries.sql
postgres-init/: 01-metabase-db.sql
(+76 files in other folders)
