[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestion*"]

[project]
name = "f1-warehouse"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "clickhouse-connect>=0.7",
    "fastf1>=3.4",
    "pydantic>=2.0",
    "structlog>=24.0",
    "pyarrow>=15.0",
    "httpx>=0.27",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
